# direct_lidar_inertial_odometry

./: CMakeLists.txt  README.md
include/dlio/: dlio.h  odom.h
include/nano_gicp/: nanoflann_adaptor.h
src/dlio/: odom.cc
src/nano_gicp/: lsq_registration.cc  nano_gicp.cc
